<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".HistoryPeminjaman">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/ck_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="4dp">

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="0dp">

                        <TextView
                            android:id="@+id/tv_karyawan"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="@string/karyawan_toko"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_res_karyawan"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="@string/res_karyawan_toko"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <View
                        android:id="@+id/divider13"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="0dp">

                        <TextView
                            android:id="@+id/tv_tokoasal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="@string/toko_asal"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_res_tokoasal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="@string/res_toko_asal"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <View
                        android:id="@+id/divider14"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="0dp">


                        <TextView
                            android:id="@+id/tv_tokotujuan"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="@string/toko_tujuan"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_res_tokotujuan"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="@string/res_toko_tujuan"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <View
                        android:id="@+id/divider15"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="0dp">

                        <TextView
                            android:id="@+id/tv_tglmulaipinjam"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="@string/tanggal_mulai_pinjam"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_res_tglmulaipinjam"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="@string/res_tanggal_mulai_pinjam"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <View
                        android:id="@+id/divider16"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="0dp">

                        <TextView
                            android:id="@+id/tv_tglselesaipinjam"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="@string/tanggal_selesai_pinjam"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_res_tglselesaipinjam"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="@string/res_tanggal_selesai_pinjam"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_hdtglinput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="0dp">

                        <TextView
                            android:id="@+id/tv_tglinput"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="Tanggal Terinput :"
                            android:textStyle="bold"
                            android:visibility="visible" />

                        <TextView
                            android:id="@+id/tv_res_tglinput"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="Tanggal Terinput"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <View
                        android:id="@+id/divider17"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:background="?android:attr/listDivider" />

                </GridLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>